--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="nav__header">
           <div class="nav__logo">
-            <a href="https://ankki.tech/"><img src="assets/logo.png" alt="logo" />Power</a>
+            <a href="https://ankii457.web.app/"><img src="assets/logo.png" alt="logo" />Power</a>
           </div>
           <div class="nav__menu__btn" id="menu-btn">
             <span><i class="ri-menu-line"></i></span>
@@ -32,7 +32,7 @@
           <li class="link"><a href="#trainer">Trainers</a></li>
           <li class="link"><a href="#price">Pricing</a></li>
           <li class="link">
-            <a href="https://ankki.tech/" class="btn">Contact Us</a>
+            <a href="https://ankii457.web.app/" class="btn">Contact Us</a>
         </li>
         
         </ul>
@@ -51,7 +51,8 @@
             of!
           </p>
           <div class="header__btn">
-            <button class="btn">Join Today</button>
+<!--             <button class="btn">Join Today</button> -->
+            <a href="https://ankii457.web.app/" class="btn">Join Today</a>
           </div>
         </div>
       </div>
